WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308903
[block-in-inline] ASSERT in ~RenderTreeNeedsLayoutChecker with float and margin
https://bugs.webkit.org/show_bug.cgi?id=308903
Summary
[block-in-inline] ASSERT in ~RenderTreeNeedsLayoutChecker with float and margin
alan
Reported
2026-02-28 12:21:22 PST
ssia
Attachments
[fast-cq]Patch
(3.37 KB, patch)
2026-02-28 12:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-02-28 12:36:44 PST
Created
attachment 478530
[details]
[fast-cq]Patch
EWS
Comment 2
2026-03-02 04:54:23 PST
Committed
308452@main
(6e21a3c75d32): <
https://commits.webkit.org/308452@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478530
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-03-02 04:55:12 PST
<
rdar://problem/171520997
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug